--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
 		"axios": "^1.7.4",
 		"feather-icons": "^4.29.2",
 		"react": "^18.3.1",
+		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.3.1",
+		"react-helmet": "^6.1.0",
+		"react-loading": "^2.0.3",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.1",
 		"react-spinners": "^0.14.1",
