--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"antd": "^5.20.2",
 		"axios": "^1.7.4",
 		"feather-icons": "^4.29.2",
+		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.3.1",
