Feat: Call API Login Staff and Admin

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-//CLOUDINARY
-CLOUDINARY_CLOUD_NAME=dj7kubwcx
-CLOUDINARY_UPLOAD_PRESET_NAME=_DiamondShop
-
 //API
-# API_URL=https://be.sportlinker.site/v1/api
+VITE_API_URL=https://diamondshop-fqgcbagydmgxa4cx.eastasia-01.azurewebsites.net/api
+VITE_MOCK_API = https://669f3824b132e2c136fd0909.mockapi.io/api
+VITE_REQRES_API =https://reqres.in/api
+VITE_API =https://diamondshop-fqgcbagydmgxa4cx.eastasia-01.azurewebsites.net/api
+VITE_DEVTUNNEL_API =https://b734tq2l-7160.asse.devtunnels.ms/api
