--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.77.8",
 		"slick-carousel": "^1.8.1",
-		"yup": "^1.4.0"
+		"yup": "^1.4.0",
+		"jwt-decode": "^4.0.0",
+		"react-native-dotenv": "^3.4.11"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
