--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
 		"antd": "^5.20.2",
 		"axios": "^1.7.4",
 		"feather-icons": "^4.29.2",
+		"jwt-decode": "^4.0.0",
 		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.3.1",
 		"react-helmet": "^6.1.0",
+		"react-icons": "^5.3.0",
 		"react-loading": "^2.0.3",
+		"react-native-dotenv": "^3.4.11",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.1",
 		"react-spinners": "^0.14.1",
@@ -36,9 +39,7 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.77.8",
 		"slick-carousel": "^1.8.1",
-		"yup": "^1.4.0",
-		"jwt-decode": "^4.0.0",
-		"react-native-dotenv": "^3.4.11"
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
