--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@reduxjs/toolkit": "^2.2.7",
 		"antd": "^5.20.2",
 		"axios": "^1.7.4",
+		"dayjs": "^1.11.13",
 		"feather-icons": "^4.29.2",
 		"jwt-decode": "^4.0.0",
 		"moment": "^2.30.1",
@@ -39,7 +40,8 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.77.8",
 		"slick-carousel": "^1.8.1",
-		"yup": "^1.4.0"
+		"yup": "^1.4.0",
+		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
