--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-icons": "^5.3.0",
 		"react-loading": "^2.0.3",
 		"react-native-dotenv": "^3.4.11",
+		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.1",
 		"react-spinners": "^0.14.1",
