--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 		"antd": "^5.20.2",
 		"axios": "^1.7.4",
 		"dayjs": "^1.11.13",
+		"dompurify": "^3.2.0",
 		"feather-icons": "^4.29.2",
+		"html-react-parser": "^5.1.18",
 		"jwt-decode": "^4.0.0",
+		"lodash": "^4.17.21",
 		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
@@ -41,8 +44,7 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.77.8",
 		"slick-carousel": "^1.8.1",
-		"yup": "^1.4.0",
-		"lodash": "^4.17.21"
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
