--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_MOCK_API = https://669f3824b132e2c136fd0909.mockapi.io/api
 VITE_REQRES_API =https://reqres.in/api
 VITE_API =https://diamondshop-fqgcbagydmgxa4cx.eastasia-01.azurewebsites.net/api
 VITE_API_DEV=https://devdiamondshop-c8b5bedsang0apaw.eastasia-01.azurewebsites.net/api
-VITE_DEVTUNNEL_API =https://w3x9xc1c-7160.asse.devtunnels.ms/api
+VITE_DEVTUNNEL_API =https://6gszm1bp-7160.asse.devtunnels.ms/api
