--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
 		"moment": "^2.30.1",
+		"quill-table": "^1.0.0",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.3.1",
