--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"html-react-parser": "^5.1.18",
 		"jwt-decode": "^4.0.0",
 		"lodash": "^4.17.21",
+		"lucide-react": "^0.468.0",
 		"moment": "^2.30.1",
 		"quill-table": "^1.0.0",
 		"react": "^18.3.1",
