--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"quill-table": "^1.0.0",
 		"react": "^18.3.1",
 		"react-apexcharts": "^1.4.1",
+		"react-countdown": "^2.3.6",
 		"react-dom": "^18.3.1",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^5.3.0",
